[tool.poetry]
name = "pypoetry-template"
version = "0.1.0"
description = ""
authors = ["Kei18 <keisuke.oku18@gmail.com>"]
readme = "README.md"
packages = [{include = "pypoetry_template"}]

[tool.poetry.dependencies]
python = "<3.13,>=3.9"
jupyterlab = ">=3.0.0,<4.0.0a0"
numpy = "^1.25.2"
pytest = "^7.4.0"
matplotlib = "^3.7.2"
jupyter-archive = "^3.4.0"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
isort = "^5.12.0"
jupyterlab-lsp = "^4.2.0"
python-lsp-server = "^1.7.4"
jupyterlab-code-formatter = "^2.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
